[tool.poetry]
name = "streams"
version = "0.1.0"
description = "A stream of data from anywhere, to anywhere"
authors = ["Tranquilo12 <shriram.sunder121091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
psycopg2-binary = "^2.8.5"
polygon-api-client = "^0.1.6"
bokeh = "^2.1.1"
prefect = "^0.12.3"
numpy = "^1.19.0"
pandas = "^1.0.5"
jupyter = "^1.0.0"
tqdm = "^4.47.0"
trio = "^0.16.0"
requests-threads = "^0.1.1"
aiohttp = "^3.6.2"
xlrd = "^1.2.0"
sqlalchemy = "^1.3.19"
asyncpg = "^0.21.0"
aiopg = "^1.0.0"
joblib = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
