[tool.poetry]
name = "streams"
version = "0.1.0"
description = "A stream of data from anywhere, to anywhere"
authors = ["Tranquilo12 <shriram.sunder121091@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
psycopg2-binary = "^2.8.5"
polygon-api-client = "^0.1.6"
prefect = "^0.12.3"
numpy = "^1.19.0"
pandas = "^1.0.5"
jupyter = "^1.0.0"
tqdm = "^4.47.0"
trio = "^0.16.0"
requests-threads = "^0.1.1"
aiohttp = "^3.6.2"
xlrd = "^1.2.0"
sqlalchemy = "^1.3.19"
asyncpg = "^0.21.0"
aiopg = "^1.0.0"
joblib = "^0.16.0"
boto3 = "^1.15.5"
urllib3 = {extras = ["secure"], version = "^1.25.10"}
paramiko = "^2.7.2"
sshtunnel = "^0.1.5"
dash = "1.16.2"
scikit-learn = "^0.23.2"
redis = "^3.5.3"
dash_bootstrap_components = "^0.10.7"
colorlover = "^0.3.0"
flask_cache = "^0.13.1"
flask = "^1.1.2"
werkzeug = "0.16.0"
flask-caching = "^1.9.0"
gunicorn = "^20.0.4"
beautifulsoup4 = "^4.9.3"
scipy = "^1.5.4"
statsmodels = "^0.12.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
